# light-scrap-vidz

./: .gitignore  README.md  eslint.config.js  index.html  install.sh  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html
snap/: snapcraft.yaml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: deb_update.rs  detect_browsers.rs  download.rs  fetch_info.rs  fetch_playlist_info.rs  fetch_thumbnail.rs  install_kind.rs  mod.rs  open_file.rs  open_folder.rs  update_ytdlp.rs
src-tauri/src/ytdlp/: builder.rs  finder.rs  parser.rs
src/components/: AudioToggle.tsx  BrowserCookieSelector.tsx  DownloadButton.tsx  FolderPicker.tsx  FormatSelector.tsx  HistoryList.tsx  PlaylistEndSelector.tsx  PlaylistPreview.tsx  ProgressCard.tsx  QueuePanel.tsx  SettingsButton.tsx  UrlInput.tsx  VideoPreview.tsx
src/components/ui/: badge.tsx  button.tsx  input.tsx  select.tsx  separator.tsx
src/hooks/: useDownload.ts  useHistory.ts  usePlaylistInfo.ts  useQueue.ts  useVideoInfo.ts
src/lib/: error-parser.ts  platform.ts  tauri-commands.ts  url-validator.ts  utils.ts
src/test/: setup.ts
src/test/components/: HistoryList.test.tsx  PlaylistPreview.test.tsx  ProgressCard.test.tsx  UrlInput.test.tsx
src/test/integration/: download-flow.test.tsx
src/types/: index.ts
