[package]
name = "light-scrap-vidz"
version = "0.1.0"
edition = "2021"

[lib]
name = "light_scrap_vidz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "light-scrap-vidz"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"

[dev-dependencies]
# unit tests via cargo test

[profile.dev]
incremental = true

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = true
